<resources>
    <string name="app_name">Calculadora</string>
    <string name="sum">Somar</string>
    <string name="minus">Subtrair</string>
    <string name="mult">Multiplicar</string>
    <string name="equals">Resultado</string>
    <string name="divide">Dividir</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dot">Casa decimal</string>
    <string name="clear">Limpar tudo</string>
    <string name="backspace">Limpar algarismo</string>
    <string name="power">Potência</string>
    <string name="lt_voltar"><![CDATA[< Voltar]]></string>
    <string name="iniciar">Iniciar</string>
    <string name="pausar">Pausar</string>
    <string name="reset">Reiniciar</string>
    <string name="hub_title">Animal Hub</string>
    <string name="hub_subtitle">Quem vai te acompanhar hoje?</string>

    <string name="app_pato">Patogotchi</string>
    <string name="desc_pato">Pato. Gotchi!</string>

    <string name="app_calc">Calculadora</string>
    <string name="desc_calc">Meowtemática</string>

    <string name="app_pomo">Pomodoro Sapo</string>
    <string name="desc_pomo">"Para momentos de "foco"</string>
    <string name="continuar">Continuar</string>

</resources>